# stwo-book

./: .gitignore  README.md  book.toml  mdbook-admonish-custom.css
.github/workflows/: ci.yml  deploy.yml  mdbook.yml
src/: SUMMARY.md  introduction.md  roadmap.md  why-stwo.md  why-use-a-proof-system.md
src/air-development/: air-composition.md  concepts.md  how-to-write-an-air.md  index.md  lookups.md  read-write-memory-air-example.md  simple-m31-air-example.md  universal-air.md  why-stwo.md  why-use-a-proof-system.md
src/awesome-stwo/: index.md
src/background/: builtins.md  cairo.md  circle-starks.md
src/benchmarks/: analyze.py  index.md  template.md.j2
src/cairo/: cairo.md  index.md
src/cairo-air/: index.md
src/getting-started/: index.md  installation.md  quickstart.md
src/how-it-works/: air.md  architecture.md  cairo.md  circle-group.md  circle-polynomials.md  columns.md  example-cairo.md  example-poseidon.md  index.md  lookups.md  (+1 more)
stwo-examples/: Cargo.toml
stwo-examples/crates/air/: Cargo.toml
stwo-examples/crates/air/src/: phase1.rs
stwo-examples/examples/: committing_to_the_trace_polynomials.rs  components.rs  constraints_over_trace_polynomials.rs  dynamic_lookups.rs  from_spreadsheet_to_trace_polynomials.rs  local_row_constraints.rs  local_row_constraints_fails_1.rs  local_row_constraints_fails_2.rs  phase0.rs  phase1.rs  preprocessed_trace.rs  proving_an_air.rs  public_input.rs  spreadsheet_functions_as_constraints.rs  static_lookups.rs
stwo-examples/program/: Cargo.toml
stwo-examples/program/src/: main.rs
theme/: book.js
(+62 files in other folders)
