[workspace]
resolver = "2"
members = ["crates/air", "program"]

[workspace.package]
name = "stwo-examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git", rev = "92984c060b49d0db05e021883755fac0a71a2fa7" }
# stwo-prover = { path = "../../stwo-webgpu/stwo-webgpu/crates/prover" }
num-traits = "0.2.17"
itertools = "0.12.0"